--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -165,7 +165,8 @@ a:focus {
 }
 
 .intro .intro-body .intro-text {
-    font-size: 18px;
+    font-size: 40px;
+    font-family: 'Sue Ellen Francisco', cursive;
 }
 
 @media(min-width:768px) {
