--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -143,6 +143,7 @@ a {
         }
         .intro-text {
             font-size: 18px;
+            font-family: 'Sue Ellen Francisco', cursive;
         }
     }
     @media(min-width:768px) {
