--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -69,8 +69,11 @@ a:focus {
 .navbar-custom .navbar-brand .navbar-toggle:active {
   outline: none;
 }
+.navbar-custom .navbar-toggle {
+  background-color: #FF5050;
+}
 .navbar-custom a {
-  color: white;
+  color: black;
 }
 .navbar-custom .nav li a {
   -webkit-transition: background 0.3s ease-in-out;
@@ -114,6 +117,9 @@ a:focus {
   }
   .navbar-custom.top-nav-collapse a {
     color: black;
+  }
+  .navbar-custom a {
+    color: white;
   }
 }
 .intro {
