--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -75,8 +75,12 @@ a {
             }
         }
     }
+    .navbar-toggle {
+        background-color: #FF5050;
+
+    }
     a {
-        color: white;
+        color: black;
     }
     .nav {
         li {
@@ -122,6 +126,10 @@ a {
             a {
                 color: black;
             }
+        }
+
+        a {
+            color: white;
         }
     }
 }
