--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -143,6 +143,7 @@ a {
     color: white;
     background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
     background-color: black;
+    border-style: solid;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -160,7 +161,7 @@ a {
         padding: 0;
         .intro-body {
             .intro-text {
-                font-size: 50px;
+                font-size: 75px;
                 font-family: 'Sue Ellen Francisco', cursive;
             }
         }
