--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -3,7 +3,7 @@ body {
   height: 100%;
   font-family: "Lora", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
-  background-color: #FF6262;
+  background-color: #ff5050;
 }
 html {
   width: 100%;
@@ -70,7 +70,7 @@ a:focus {
   outline: none;
 }
 .navbar-custom .navbar-toggle {
-  background-color: #FF5050;
+  background-color: #ff5050;
 }
 .navbar-custom a {
   color: black;
@@ -81,7 +81,7 @@ a:focus {
   transition: background 0.3s ease-in-out;
 }
 .navbar-custom .nav li a:hover {
-  color: #FF5050;
+  color: #ff5050;
   outline: none;
   background-color: transparent;
 }
@@ -154,8 +154,6 @@ a:focus {
   }
   .intro .intro-body .intro-text {
     font-size: 75px;
-    font-family: 'Sue Ellen Francisco', cursive;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   }
 }
 @media (max-width: 768px) {
