--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -6,7 +6,7 @@ body {
     height: 100%;
     font-family: "Lora","Helvetica Neue",Helvetica,Arial,sans-serif;
     color: white;
-    background-color: #FF6262;
+    background-color: @secondary;
 }
 
 html {
@@ -76,7 +76,7 @@ a {
         }
     }
     .navbar-toggle {
-        background-color: #FF5050;
+        background-color: @secondary;
 
     }
     a {
@@ -89,7 +89,7 @@ a {
                 -moz-transition: background .3s ease-in-out;
                 transition: background .3s ease-in-out;
                 &:hover {
-                    color: #FF5050;
+                    color: @secondary;
                     outline: none;
                     background-color: transparent;
                 }
@@ -164,8 +164,6 @@ a {
         .intro-body {
             .intro-text {
                 font-size: 75px;
-                font-family: 'Sue Ellen Francisco', cursive;
-                text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
             }
         }
     }
