adding google maps

--- a/less/wedding.less
+++ b/less/wedding.less
@@ -397,6 +397,11 @@ body {
     h1{ font-size: 36px;}
 }
 
+#map {
+    width: 750px;
+    height: 300px;
+}
+
 .colorgraph {
   height: 5px;
   border-top: 0;
