--- a/css/wedding.css
+++ b/css/wedding.css
@@ -375,6 +375,10 @@ body {
     font-size: 36px;
   }
 }
+#map {
+  width: 750px;
+  height: 300px;
+}
 .colorgraph {
   height: 5px;
   border-top: 0;
