--- a/less/wedding.less
+++ b/less/wedding.less
@@ -400,6 +400,26 @@ body {
 #map {
     width: 750px;
     height: 300px;
+    border: 5px solid #2c3e50;
+}
+
+#wedding_location {
+    .row {
+        margin-bottom: 10px;
+
+        .left {
+
+            text-align: left;
+
+            h4 {
+                margin: 0px;
+            }
+
+            a {
+                cursor:pointer
+            }
+        }
+    }
 }
 
 .colorgraph {
