--- a/less/wedding.less
+++ b/less/wedding.less
@@ -397,10 +397,12 @@ body {
     h1{ font-size: 36px;}
 }
 
-#map {
-    width: 750px;
-    height: 300px;
-    border: 5px solid #2c3e50;
+@media(min-width:768px) {
+    #map {
+        width: 750px;
+        height: 300px;
+        border: 5px solid #2c3e50;
+    }
 }
 
 #wedding_location {
