--- a/less/wedding.less
+++ b/less/wedding.less
@@ -436,8 +436,14 @@ body {
 }
 
 .form-control {
-  position: relative;
-  font-size: 16px;
-  height: auto;
-  padding: 10px;
+    position: relative;
+    font-size: 16px;
+    height: auto;
+    padding: 10px;
+
+    ::selection {
+        color: red;
+        background: yellow;
+    }
+
 }
