--- a/less/wedding.less
+++ b/less/wedding.less
@@ -152,10 +152,10 @@ a {
     color: white;
     background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
     background-color: black;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+    -webkit-background-size: contain;
+    -moz-background-size: contain;
+    background-size: contain;
+    -o-background-size: contain;
     .intro-body {
         display: table-cell;
         vertical-align: middle;
@@ -382,9 +382,6 @@ body {
     #slider{display: none;}
     .btn-subscribe{border-radius: 20px;}
     #contact-informations{margin-top: 24px;}
-    body {
-        background-color: #2c3e50;
-    }
 }
 @media only screen and (max-width: 740px) {
     .timer_box{
@@ -429,6 +426,9 @@ body {
   border-top: 0;
   background: #c4e17f;
   border-radius: 5px;
+  margin-bottom: 0px;
+  margin-top: 0px;
+
   background-image: -webkit-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
   background-image: -moz-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
   background-image: -o-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
