fixing background image scaling

--- a/less/wedding.less
+++ b/less/wedding.less
@@ -152,10 +152,10 @@ a {
     color: white;
     background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
     background-color: black;
-    -webkit-background-size: contain;
-    -moz-background-size: contain;
-    background-size: contain;
-    -o-background-size: contain;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
     .intro-body {
         display: table-cell;
         vertical-align: middle;
