adding registry info

--- a/css/wedding.css
+++ b/css/wedding.css
@@ -99,7 +99,7 @@ a:focus {
   outline: none;
 }
 .navbar-custom .nav li.active a {
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: transparent;
 }
 .navbar-custom .nav li.active a:hover {
   color: black;
@@ -402,17 +402,14 @@ body {
   background-image: -o-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
   background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
 }
-.form-control {
-  position: relative;
-  font-size: 16px;
-  height: auto;
-  padding: 10px;
+.wedding_registry img {
+  width: 500px;
+  height: 350px;
+  padding-bottom: 20px;
 }
-::-moz-selection {
-  background-color: #ccc;
-  color: #fff;
-}
-::selection {
-  background-color: #ccc;
-  color: #fff;
+@media only screen and (max-width: 520px) {
+  .wedding_registry img {
+    width: 200px;
+    height: 150px;
+  }
 }
