--- a/less/wedding.less
+++ b/less/wedding.less
@@ -149,7 +149,7 @@ a {
     height: auto;
     text-align: center;
     color: white;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
+    background: url("http://s3.amazonaws.com/padgettwedding/intro-bg.jpg") no-repeat bottom center scroll;
     background-color: black;
     -webkit-background-size: cover;
     -moz-background-size: cover;
