--- a/css/wedding.css
+++ b/css/wedding.css
@@ -8,6 +8,9 @@ body {
 .content-section.flip {
   background-color: #2c3e50;
 }
+.container.header {
+  width: 100%;
+}
 .row {
   margin-right: 0px;
 }
