--- a/css/wedding.css
+++ b/css/wedding.css
@@ -376,9 +376,10 @@ body {
 }
 @media (min-width: 768px) {
   #map {
-    width: 750px;
+    width: 100%;
     height: 300px;
     border: 5px solid #2c3e50;
+    margin: 0 auto 0 auto;
   }
 }
 #wedding_location .row {
@@ -392,6 +393,9 @@ body {
 }
 #wedding_location .row .left a {
   cursor: pointer;
+}
+#wedding_location .row .right {
+  text-align: right;
 }
 .colorgraph {
   height: 5px;
