adding padding to mobile view for wedding location section

--- a/less/wedding.less
+++ b/less/wedding.less
@@ -432,6 +432,14 @@ body {
     }
 }
 
+@media(max-width:768px) {
+    #wedding_location {     
+        .row { 
+            padding-left: 10px;
+        }
+    } 
+}
+
 .colorgraph {
   height: 5px;
   border-top: 0;
