--- a/css/wedding.css
+++ b/css/wedding.css
@@ -374,14 +374,6 @@ body {
     font-size: 36px;
   }
 }
-@media (min-width: 768px) {
-  #map {
-    width: 100%;
-    height: 300px;
-    border: 5px solid #2c3e50;
-    margin: 0 auto 0 auto;
-  }
-}
 #wedding_location .row {
   margin-bottom: 10px;
 }
@@ -396,6 +388,19 @@ body {
 }
 #wedding_location .row .right {
   text-align: right;
+}
+@media (min-width: 768px) {
+  #wedding_location #map {
+    width: 100%;
+    height: 300px;
+    border: 5px solid #2c3e50;
+    margin: 0 auto 0 auto;
+  }
+}
+@media (max-width: 768px) {
+  #wedding_location .row {
+    padding-left: 10px;
+  }
 }
 .colorgraph {
   height: 5px;
