adding cloudfront links for images

--- a/less/wedding.less
+++ b/less/wedding.less
@@ -153,7 +153,7 @@ a {
     height: auto;
     text-align: center;
     color: white;
-    background: url("http://s3.amazonaws.com/padgettwedding/intro-bg.jpg") no-repeat bottom center scroll;
+    background: url("http://d150j3rgby0kbc.cloudfront.net/intro-bg.jpg") no-repeat bottom center scroll;
     background-color: black;
     -webkit-background-size: cover;
     -moz-background-size: cover;
