--- a/css/wedding.css
+++ b/css/wedding.css
@@ -138,7 +138,7 @@ a:focus {
   height: auto;
   text-align: center;
   color: white;
-  background: url("http://s3.amazonaws.com/padgettwedding/intro-bg.jpg") no-repeat bottom center scroll;
+  background: url("http://d150j3rgby0kbc.cloudfront.net/intro-bg.jpg") no-repeat bottom center scroll;
   background-color: black;
   -webkit-background-size: cover;
   -moz-background-size: cover;
