--- a/css/wedding.css
+++ b/css/wedding.css
@@ -301,11 +301,11 @@ body {
 }
 #countdown h2 {
   font-family: 'Sue Ellen Francisco', cursive;
-  font-size: 100px;
+  font-size: 80px;
 }
 @media (max-width: 400px) {
   #countdown h2 {
-    font-size: 60px;
+    font-size: 50px;
   }
 }
 #ceremony iframe {
@@ -389,6 +389,10 @@ body {
 #wedding_location .row .right {
   text-align: right;
 }
+#wedding_location .row .hotel-info {
+  padding-left: 15px;
+  padding-right: 15px;
+}
 @media (min-width: 768px) {
   #wedding_location #map {
     width: 100%;
@@ -401,6 +405,9 @@ body {
   #wedding_location .row {
     padding-left: 10px;
   }
+}
+.textbox {
+  background-color: #FC7A7A;
 }
 .colorgraph {
   height: 5px;
