--- a/less/wedding.less
+++ b/less/wedding.less
@@ -337,11 +337,11 @@ body {
 #countdown {
     h2 {
         font-family: 'Sue Ellen Francisco', cursive; 
-        font-size: 100px;
+        font-size: 80px;
     }
     @media(max-width:400px) {
         h2 {
-            font-size: 60px;    
+            font-size: 50px;    
         }
     }
 }
@@ -418,6 +418,11 @@ body {
         .right {
             text-align: right;
         }
+
+        .hotel-info {
+            padding-left: 15px; 
+            padding-right: 15px;
+        }
     }
 }
 
@@ -438,6 +443,10 @@ body {
             padding-left: 10px;
         }
     } 
+}
+
+.textbox {
+    background-color: #FC7A7A;
 }
 
 .colorgraph {
