--- a/css/wedding.css
+++ b/css/wedding.css
@@ -153,6 +153,7 @@ a:focus {
   font-size: 30px;
   font-family: 'Sue Ellen Francisco', cursive;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  margin-top: 25%;
 }
 @media (min-width: 768px) {
   .intro {
@@ -172,6 +173,7 @@ a:focus {
   width: 70px;
   height: 70px;
   margin-top: 15px;
+  margin-bottom: 15px;
   padding: 7px 16px;
   border: 2px solid white;
   border-radius: 100% !important;
