--- a/less/wedding.less
+++ b/less/wedding.less
@@ -166,6 +166,7 @@ a {
             font-size: 30px;
             font-family: 'Sue Ellen Francisco', cursive;
             text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+            margin-top: 25%;
         }
     }
     @media(min-width:768px) {
@@ -190,6 +191,7 @@ a {
     width: 70px;
     height: 70px;
     margin-top: 15px;
+    margin-bottom: 15px;
     padding: 7px 16px;
     border: 2px solid white;
     border-radius: 100% !important;
