--- a/css/wedding.css
+++ b/css/wedding.css
@@ -3,10 +3,15 @@ body {
   height: 100%;
   font-family: "Lora", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
-  background-color: #ff5050;
+  background-color: #42dca3;
+}
+.container-full {
+  margin: 0 auto;
+  width: 100%;
 }
 .content-section.flip {
-  background-color: #2c3e50;
+  background-color: #FFFFFF;
+  color: black;
 }
 .container.header {
   width: 100%;
@@ -33,6 +38,7 @@ p {
   margin: 0 0 25px;
   font-size: 18px;
   line-height: 1.5;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 @media (min-width: 768px) {
   p {
@@ -78,7 +84,7 @@ a:focus {
   outline: none;
 }
 .navbar-custom .navbar-toggle {
-  background-color: #ff5050;
+  background-color: #42dca3;
 }
 .navbar-custom a {
   color: black;
@@ -89,7 +95,7 @@ a:focus {
   transition: background 0.3s ease-in-out;
 }
 .navbar-custom .nav li a:hover {
-  color: #ff5050;
+  color: #42dca3;
   outline: none;
   background-color: transparent;
 }
@@ -321,14 +327,14 @@ body {
   text-align: center;
   width: 130px;
   border-radius: 50%;
-  border: 4px solid rgba(255, 255, 255, 0.6);
+  border: 4px solid rgba(0, 0, 0, 0.6);
 }
 .timer_box h1 {
   font-size: 48px;
   margin-top: 5px;
   margin-bottom: 0px;
   font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: white;
+  color: black;
 }
 .timer_box p {
   margin-top: 0px;
@@ -409,7 +415,14 @@ body {
   }
 }
 .textbox {
-  background-color: #FC7A7A;
+  background-color: #FFFFFF;
+  color: black;
+  border-radius: 10px;
+}
+.textbox p {
+  font-size: 14px;
+  margin: 0;
+  padding: 0;
 }
 .colorgraph {
   height: 5px;
