--- a/less/wedding.less
+++ b/less/wedding.less
@@ -9,8 +9,14 @@ body {
     background-color: @secondary;
 }
 
+.container-full {
+    margin: 0 auto;
+    width: 100%;
+}
+
 .content-section.flip {
-    background-color: #2c3e50;
+    background-color: #FFFFFF;
+    color: black;
 }
 
 .container.header {
@@ -42,6 +48,7 @@ p {
     margin: 0 0 25px;
     font-size: 18px;
     line-height: 1.5;
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     @media(min-width:768px) {
         margin: 0 0 35px;
         font-size: 20px;
@@ -362,14 +369,14 @@ body {
     text-align: center;
     width: 130px;
     border-radius: 50%;
-    border: 4px solid rgba(255, 255, 255, .6);
+    border: 4px solid rgba(0, 0, 0, .6);
 }
 .timer_box h1 {
     font-size: 48px;
     margin-top: 5px;
     margin-bottom: 0px;
     font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: white;
+    color: black;
 }
 .timer_box p { 
     margin-top: 0px;
@@ -401,6 +408,7 @@ body {
 }
 
 #wedding_location {
+
     .row {
         margin-bottom: 10px;
 
@@ -413,7 +421,7 @@ body {
             }
 
             a {
-                cursor:pointer
+                cursor:pointer;
             }
         }
 
@@ -448,7 +456,14 @@ body {
 }
 
 .textbox {
-    background-color: #FC7A7A;
+    background-color: #FFFFFF;
+    color: black;
+    border-radius: 10px;
+    p {
+        font-size: 14px;
+        margin: 0;
+        padding: 0;
+    }
 }
 
 .colorgraph {
