--- a/css/wedding.css
+++ b/css/wedding.css
@@ -413,6 +413,9 @@ body {
   #wedding_location .row {
     padding-left: 10px;
   }
+  #wedding_registry .row {
+    padding-left: 10px;
+  }
 }
 .textbox {
   background-color: #FFFFFF;
