--- a/less/wedding.less
+++ b/less/wedding.less
@@ -453,6 +453,12 @@ body {
             padding-left: 10px;
         }
     } 
+
+    #wedding_registry {     
+        .row { 
+            padding-left: 10px;
+        }
+    } 
 }
 
 .textbox {
