mobile styles for our story

--- a/css/wedding.css
+++ b/css/wedding.css
@@ -416,6 +416,9 @@ body {
   #wedding_registry .row {
     padding-left: 10px;
   }
+  #story .row {
+    padding-left: 10px;
+  }
 }
 .textbox {
   background-color: #FFFFFF;
