--- a/less/wedding.less
+++ b/less/wedding.less
@@ -459,6 +459,12 @@ body {
             padding-left: 10px;
         }
     } 
+
+    #story {     
+        .row { 
+            padding-left: 10px;
+        }
+    } 
 }
 
 .textbox {
