--- a/less/wedding.less
+++ b/less/wedding.less
@@ -42,6 +42,13 @@ h6 {
     font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
+
+    &::selection {
+      background: #fff2a8; /* WebKit/Blink Browsers */
+    }
+    &::-moz-selection {
+      background: #fff2a8; /* Gecko Browsers */
+    }
 }
 
 p {
@@ -54,6 +61,22 @@ p {
         font-size: 20px;
         line-height: 1.6;
     }
+
+    &::selection {
+      background: #fff2a8; /* WebKit/Blink Browsers */
+    }
+    &::-moz-selection {
+      background: #fff2a8; /* Gecko Browsers */
+    }
+}
+
+b {
+    &::selection {
+      background: #fff2a8; /* WebKit/Blink Browsers */
+    }
+    &::-moz-selection {
+      background: #fff2a8; /* Gecko Browsers */
+    }
 }
 
 a {
@@ -65,6 +88,13 @@ a {
     &:focus {
         text-decoration: none;
         color: darken(@primary,20%);
+    }
+
+    &::selection {
+      background: #fff2a8; /* WebKit/Blink Browsers */
+    }
+    &::-moz-selection {
+      background: #fff2a8; /* Gecko Browsers */
     }
 }
 
