macys wedding registry

--- a/css/wedding.css
+++ b/css/wedding.css
@@ -484,14 +484,29 @@ body {
   background-image: -o-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
   background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
 }
-.wedding_registry img {
+.wedding_registry .store {
+  padding-left: 5px;
+  float: left;
+}
+.wedding_registry .store.bbb img {
   width: 500px;
   height: 350px;
   padding-bottom: 20px;
 }
 @media only screen and (max-width: 520px) {
-  .wedding_registry img {
+  .wedding_registry .store.bbb img {
     width: 200px;
     height: 150px;
+  }
+}
+.wedding_registry .store.macys img {
+  width: 500px;
+  height: 198px;
+  padding-bottom: 20px;
+}
+@media only screen and (max-width: 520px) {
+  .wedding_registry .store.macys img {
+    width: 200px;
+    height: 80px;
   }
 }
