--- a/less/wedding.less
+++ b/less/wedding.less
@@ -523,15 +523,39 @@ body {
 }
 
 .wedding_registry {
-    img {
 
-        width: 500px;
-        height: 350px;
-        padding-bottom: 20px;
+    .store {
 
-        @media only screen and (max-width: 520px) {
-            width: 200px;
-            height: 150px;
+        padding-left: 5px;
+        float: left;
+
+        
+        &.bbb {
+            img {
+
+                width: 500px;
+                height: 350px;
+                padding-bottom: 20px;
+
+                @media only screen and (max-width: 520px) {
+                    width: 200px;
+                    height: 150px;
+                }
+            }
+        }
+
+        &.macys {
+            img {
+
+                width: 500px;
+                height: 198px;
+                padding-bottom: 20px;
+
+                @media only screen and (max-width: 520px) {
+                    width: 200px;
+                    height: 80px;
+                }
+            }
         }
     }
 }
